# Compile-Time-Calculator

./: CMakeLists.txt  README.md  calcmeta.cpp
include/: Carry.hpp  Digits.hpp  Miscellaenous.hpp  Operations.hpp  Print.hpp  Sum.hpp  TypeList.hpp
include/core/: Add.hpp  Binary.hpp  Divide.hpp  Exponent.hpp  Multiply.hpp  Subtract.hpp
include/notation/: Scientific.hpp
myfolder/: Carry.hpp  SumResult.hpp  digits.hpp  more.cpp
