cmake_minimum_required(VERSION 3.29)
project(TempCalculator CXX)
set(CMAKE_CXX_STANDARD 20)

set(Boost_MP11_Include_Dirs "/opt/homebrew/opt/boost/include/")
set(Calculator_Include_Dirs "/Users/raymondpark/Desktop/music_software/template calc/include")
add_executable(run calcmeta.cpp)
target_include_directories(run PUBLIC ${Boost_MP11_Include_Dirs} ${Calculator_Include_Dirs})

add_definitions(-DNUMBER1="${NUMBER1}")
add_definitions(-DNUMBER2="${NUMBER2}")
add_definitions(-DOPERATION="${OPERATION}")

if (NOT PRECISION)
    add_definitions(-DPRECISION=10)
else()
    add_definitions(-DPRECISION=${PRECISION})
endif()

if(OPERATION STREQUAL "*")
    add_definitions(-DMULTIPLY)
elseif(OPERATION STREQUAL "+")
    add_definitions(-DADD)
elseif(OPERATION STREQUAL "-")
    add_definitions(-DSUBTRACT)
elseif(OPERATION STREQUAL "/")
    add_definitions(-DDIVIDE)
else()
    message(FATAL_ERROR "Unknown OPERATION: ${OPERATION}")
endif()
